package banana.republic.board;


public class Intersection {
    // Placeholder 
}
